--- a/it.unibo.radarSystem22/userDocs/Capuzzo_Massimo.html
+++ b/it.unibo.radarSystem22/userDocs/Capuzzo_Massimo.html
@@ -256,8 +256,8 @@ Si desidera costruire un’applicazione software capace di:
 </div>  
 
 <div style="background-color:rgba(86, 56, 253, 0.9); width:60%;text-align:left;color:white">
-By Massimo Capuzzo email: massimo.capuzzo@studio.unibo.it  
-<img src="./img/emiglio.png" alt="mbot" width="15%" height="15%">
+By Massimo Capuzzo email: massimo.capuzzo@studio.unibo.it GitHub: https://github.com/mcapuzzo/iss2022 
+<img src="./img/unnamed.jpg" alt="mbot" width="15%" height="15%">
 </div> 
 </body>
 </html>
